# nbm-v5-verification

./: .gitignore  IMPLEMENTATION.md  README.md  dask_multi_grib_analysis.ipynb  env.yaml  file_explorer.ipynb  nbm_grib_tools.py  pyproject.toml  requirements.txt
config/: README.md
config/shapefiles/cwa/: README.md
config/shapefiles/rfc/: README.md
config/shapefiles/zones/: README.md
dev/: detailed_grib_catalog.py  jfwprb_statistics_calculator.py
examples/: README.md  basic_usage_demo.py
src/nbm_verification/: __init__.py
src/nbm_verification/accumulation/: __init__.py  accumulator_base.py  merger.py  spatial_accumulator.py
src/nbm_verification/data_access/: __init__.py  file_inventory.py  nbm_reader.py  synoptic_client.py  urma_reader.py
src/nbm_verification/metrics/: __init__.py  calculator.py  categorical.py  continuous.py  probabilistic.py
src/nbm_verification/qc/: __init__.py  completeness.py  data_validation.py  warnings.py
src/nbm_verification/spatial/: __init__.py  grid_manager.py  regions.py  spatial_index.py  stations.py
src/nbm_verification/storage/: __init__.py  checkpoint_manager.py  metadata.py  output_writer.py
src/nbm_verification/temporal/: __init__.py  alignment.py  time_manager.py
src/nbm_verification/utils/: __init__.py  config_parser.py  exceptions.py  logging.py
src/nbm_verification/workflow/: __init__.py  chunking_strategy.py  orchestrator.py  processor.py
tests/: test_continuous_metrics.py
